src/mesa/drivers/dri/i965/brw_vec4_visitor.cpp
@@ -776,7 +776,7 @@ vec4_visitor::emit_bool_to_cond_code(ir_rvalue *ir,
 
    *predicate = BRW_PREDICATE_NORMAL;
 
-   if (expr) {
+   if (expr && expr->operation != ir_binop_ubo_load) {
       src_reg op[3];
       vec4_instruction *inst;
 
@@ -897,7 +897,7 @@ vec4_visitor::emit_if_gen6(ir_if *ir)
 {
    ir_expression *expr = ir->condition->as_expression();
 
-   if (expr) {
+   if (expr && expr->operation != ir_binop_ubo_load) {
       src_reg op[3];
       dst_reg temp;
 
